--- a/css/style.css
+++ b/css/style.css
@@ -727,7 +727,9 @@ button {
   top:20%;
   left:5%;
 }
-
+#panel-8{
+  z-index:-1;
+}
 /* banner---------------------------------------------------- */
 /* banner---------------------------------------------------- */
 /* banner---------------------------------------------------- */
