--- a/css/style.css
+++ b/css/style.css
@@ -719,8 +719,7 @@ button {
 #panel-6>div>h2,
 #panel-8>div>h2,
 #panel-9>div>h2,
-#panel-10>div>h2,
-#panel-11>div>h2{
+#panel-10>div>h2{
   position:absolute;
   font-size:8rem;
   font-style:italic;
@@ -733,22 +732,80 @@ button {
 /* banner---------------------------------------------------- */
 /* banner---------------------------------------------------- */
 /* banner---------------------------------------------------- */
-#panel-11>div>h2:nth-child(1){
+#panel-11 .fx{
+  margin-top:40vh;
+  gap:3vw;
+}
+#panel-11 h2{
   position:absolute;
-  font-size:7rem;
+  font-size:5rem;
   font-style:italic;
   font-family:'arimo',sans-serif;
   top:20%;
-  left:30%;
+  left:5%;
+}
+.work h3{
+  font-size:2rem;
+}
+
+.work>div{
+  overflow:hidden;
+  border-radius:1rem;
 }
 #panel-11 .row{
   position:relative;
-  margin-top:30vh;
-  margin-left:30vw;
-  width:40vw;
-  height:53vh;
+  width:25vw;
+  height:35vh;
   background-color:blue;
   overflow:hidden;
+}
+.grad{
+  width:25vw;
+  height:35vh;
+  background-color: blue;
+
+}
+.grad>img{
+  width:100%;
+  height:100%;
+  object-fit: cover;
+  
+}
+
+.cart{
+  width:25vw;
+  height:35vh;
+  background-color: orange;
+}
+.cart>img{
+  width:100%;
+  height:100%;
+  object-fit: cover;
+}
+.gradin,
+.cartin{
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  color:#fff;
+  text-align:center;
+  padding-top:25%;
+  opacity:0;
+  transition:all 1s;
+}
+.gradin:hover{
+  opacity:1;
+}
+.cartin:hover{
+  opacity:1;
+}
+
+.gradin p:nth-of-type(1),
+.cartin p:nth-of-type(1){
+  font-size:3rem;
+  margin-bottom:10%;
 }
 #panel-11 .row .rowText{
   position: absolute;
@@ -759,7 +816,9 @@ button {
   text-align:center;
   font-size:2rem;
   line-height:2.5rem;
-  background-color: rgba(158, 158, 158, 0.7);
+  background-color:  rgba(0, 0, 0, 0.4);
+  color:#fff;
+  padding-top:25%;
   opacity:0;
   transition:opacity 1s;
   /* display:block; */
@@ -768,15 +827,9 @@ button {
 #panel-11 .row .rowText.active{
   opacity:1;
 }
-#panel-11 .row .rowText p{
-  position: absolute;
-  top:50%;
-  left:50%;
-  transform:translateX(-50%);
-  color:#fff;
-  font-size:2rem;
-  line-height:2.5rem;
-  z-index:2;
+#panel-11 .row .rowText p:nth-child(1){
+  font-size:3rem;
+  margin-bottom:10%;
 }
 .row>img{
   position:absolute;
@@ -790,47 +843,43 @@ button {
 }
 
 #lightbox{ /* 박스 */
-  position:absolute;
-  top: 0%;
+  position:fixed;
+  top:0;
   left:0%;
-  width:100%;
+  width:40rem;
   height:100%;
-  transform: translateY(-100%);
-  background-color: rgba(0,0,0,.9);
+  /* transform: translateY(-100%); */
+  background-color: rgba(0,0,0,.6);
   z-index:50;
   transition:all 1s;
   overflow:hidden;
+  display:none;
 }
 #lightbox>p{
   position:absolute;
-  left:60%;
+  left:75%;
   top:50%;
   font-size:2rem;
   color:#fff;
   text-align:center;
 }
 #lightboxImage{
-  width:50rem;
-  height:150rem;
+  width:50%;
+  height:100%;
+  position:fixed;
+  left:0%;
 }
-#lightboxImage>img{
-  position:absolute;
-  top:0;
-  left:0;
-  width:60rem;
-  height:100rem;
-  z-index:7;
-}
-/* #lightbox p{
-} */
+
+/* 이게 안의 이미지 */
 .banner_img>img{
   position:absolute;
   top:0;
-  left:0;
-  width:31.5rem;
+  left:-10%;
+  height:100%;
   z-index:7;
 
 }
+
 /* 제목 애니메이션 */
 /* 마우스 애니메이션 */
 .cursor{
@@ -1220,8 +1269,8 @@ line {
 content:'';
 position:absolute;
 background: url(../img/star_soft.png) top/contain;
-top:-20%;
-right:-40%;
+top:-10%;
+right:-30%;
 width:10rem;
 height:10rem;
 z-index:1;
