--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,10 @@ p.sa{
   width:1px;
   height:1px;
 }
+#masthead a.mark{
+  color:red;
+  background-color: red;
+}
 
 #masthead p:after{
   position:absolute;
@@ -1360,17 +1364,7 @@ transform: scale(1.4);
   transition: all 0.9s ease;
 }
 
-/* .gnb:before {
-  content: "";
-  position: absolute;
-  top: 100%;
-  right: 0;
-  width: 100%;
-  height: 3px;
-  background-color: #81ccfe;
-  transform: scaleX(0);
-  transition: transform 0.3s;
-} */
+
 .hover-14:after {
   content: "";
   position: absolute;
@@ -1382,13 +1376,13 @@ transform: scale(1.4);
   /* background-color: #81ccfe; */
   transform: scaleX(0);
   transition: transform 0.3s;
-  animation:textani2 3s linear infinite;
+  animation:textani2 1s linear infinite;
   z-index:-1;
   
 }
 @keyframes textani2 {
   0% {
-    box-shadow: inset 0 0 0 0 rgba(79, 199, 255, 0.7),  inset 0 0 0 0 rgba(45, 206, 255, 0.7);
+    box-shadow: inset 0 0 0 0 rgba(45, 206, 255, 0.7),  inset 0 0 0 0 rgba(45, 206, 255, 0.7);
 }
 40% {
     box-shadow: inset  0 0 0 4rem rgba(244, 175, 167, 0), inset  0 0 0 0 rgba(45, 206, 255, 0.7);
@@ -1403,36 +1397,10 @@ transform: scale(1.4);
 .gnb .hover-14 {
   padding: 0.5rem 1.3rem;
 }
-/* .gnb .hover-14:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 3px;
-  height: 100%;
-  background-color: #81ccfe;
-  transform: scaleX(0);
-  transition: transform 0.3s;
-}
-.gnb .hover-14:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 3px;
-  height: 100%;
-  background-color: #81ccfe;
-  transform: scaleX(0);
-  transition: transform 0.3s;
-} */
-/* .gnb:hover:before, .gnb:hover:after {
-  transform: scaleX(1);
-} */
 .hover-14:hover:after {
   transform: scaleX(1);
-  
 }
-.hover-14:hover{
+.gnb:hover{
   color:#4b4b4b;
 }
 .gnb:hover p:after{
@@ -1445,7 +1413,7 @@ transform: scale(1.4);
   #panel-1 .title h2,
   #panel-1 .title h1 {
     max-width: 100%;
-    font-size: clamp(12rem, 22rem, 6vw);
+    font-size: clamp(8rem, 18rem, 6vw);
     font-weight: 600;
     letter-spacing: -1rem;
     color: rgba(255, 255, 255, .4);
