--- a/css/style.css
+++ b/css/style.css
@@ -463,7 +463,7 @@ button {
 }
 .pj1_box {
   top:30%;
-  left: -14%;
+  left: -5%;
   width: 42vw;
   height: 40vh;
   z-index:1000;
@@ -472,6 +472,33 @@ button {
   font-size: 4.6vh;
   font-weight: 500;
   margin-bottom: 7rem;
+}
+.pj1_box h2:after{
+  position:absolute;
+  content:'재설계 / 반응형';
+  top:5.5%;
+  left:27%;
+  color:var(--color2);
+  font-weight:400;
+  font-size:2rem;
+}
+.pj2_box h2:after{
+  position:absolute;
+  content:'반응형';
+  top:5.5%;
+  left:30%;
+  color:var(--color2);
+  font-weight:400;
+  font-size:2rem;
+}
+.pj3_box h2:after{
+  position:absolute;
+  content:'SCSS';
+  top:5.5%;
+  left:30%;
+  color:var(--color2);
+  font-weight:400;
+  font-size:2rem;
 }
 .pj_box p:nth-of-type(1) {
   position:relative;
@@ -573,7 +600,7 @@ button {
   width: 160rem;
   height: 100vh;
   top: 10%;
-  left: -15%;
+  left: -10%;
   z-index: 3;
 }
 .project2 .pj2_visual:after {
@@ -594,7 +621,7 @@ button {
   width: 150rem;
   height: 100vh;
   top: 0;
-  left: -20%;
+  left: -15%;
   z-index: 3;
 }
 .project3 .pj3_visual:after {
@@ -620,7 +647,7 @@ button {
   position:absolute;
   width:45%;
   height:100%;
-  left:25%;
+  left:35%;
 }
 .project2 .pj2_visual img {
   width: 100%;
@@ -649,7 +676,7 @@ button {
 .pj2_box {
   position:absolute;
   top: 30%;
-  left: 65%;
+  left: 70%;
   width: 40vw;
   height: 40vh;
   z-index:60000;
@@ -1432,7 +1459,7 @@ transform: scale(1.4);
   #panel-1 .title h2 {
     margin-bottom: 2vw;
     font-weight: 900;
-    text-shadow: 0px 3px 0px #206eff,
+    text-shadow: 0px 3px 0px #177cff,
       0px 14px 10px rgba(0, 0, 0, 0.15),
       0px 24px 2px rgba(0, 0, 0, 0.1),
       0px 34px 30px rgba(0, 0, 0, 0.1);
@@ -1445,7 +1472,7 @@ transform: scale(1.4);
   #panel-1 .title h1 span:nth-child(2), 
   #panel-1 .title h1 span:nth-child(3), 
   #panel-1 .title h1 span:nth-child(4){
-    text-shadow: 0px 3px 0px #206eff,
+    text-shadow: 0px 3px 0px #177cff,
       0px 14px 10px rgba(0, 0, 0, 0.15),
       0px 24px 2px rgba(0, 0, 0, 0.1),
       0px 34px 30px rgba(0, 0, 0, 0.1);
